--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rethinkdb-repository",
   "version": "1.1.0",
   "description": "Implementation of Repository pattern for RethinkDB",
-  "main": "/build/app/Database.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
